# SlocCount

./: .editorconfig  .prettierignore  Justfile  LICENSE  README.md  lefthook.yml  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup-diagrams-dependencies/: action.yml
.github/actions/setup-scanner-dependencies/: action.yml
.github/actions/setup-tests-dependencies/: action.yml
.github/other-configurations/: .linkspector.yml  codeql-config.yml  labeller.yml  labels.yml  pinact.yml
.github/super-linter-configurations/: .ecrc  .editorconfig-checker.json  .eslintrc.yml  .jscpd.json  .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: clean-caches.yml  code-checks.yml  deploy.yml  pull-request-tasks.yml  sync-labels.yml
dashboard/: .gitignore  README.md  dashboard.just  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
diagrams/: c4.py  diagrams.just  pyproject.toml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
main/: codelimit.md  report.json
scanner/: .gitignore  main.py  pyproject.toml  scanner.just
scanner/app/: __main__.py  configuration.py  custom_logging.py  custom_types.py  github_interactions.py  main.py
scanner/app/tests/: test__main__.py  test_configuration.py  test_custom_logging.py  test_github_integrations.py  test_main.py
scripts/: diagram.py
tests/: pyproject.toml  tests.just
tests/schema_validation/: output_schema.json
